[gd_scene load_steps=7 format=2]

[ext_resource path="res://Builder.gd" type="Script" id=1]
[ext_resource path="res://Images/Characters/builder/idle/Sprite-0003.png" type="Texture" id=2]
[ext_resource path="res://Images/Characters/builder/idle/Sprite-0002.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 0.5
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 15.5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
light_mask = 0
input_pickable = true
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
z_index = 1
shape = SubResource( 3 )

[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_KinematicBody2D_mouse_exited"]
